# rnalib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  readme.rst  requirements.txt
notebooks/: AdvancedUsage.ipynb  README.ipynb  RelatedWork_performance.ipynb  Tutorial_CTCF_analysis.ipynb  Tutorial_SLAM-seq.ipynb  Tutorial_compare_annotation_sets.ipynb  Tutorial_expression_analysis.ipynb  Tutorial_mismatch_analysis.ipynb  Tutorial_shRNA_analysis.ipynb  Tutorial_transcriptome_annotation.ipynb  pygenlib_performance_tests.ipynb
pygenlib/: __init__.py  constants.py  genemodel.py  iterators.py  testdata.py  utils.py
pygenlib/_delme/: genemodel.py
rnalib/: __init__.py  constants.py  interfaces.py  rnalib  rnalib_create_testdata  testdata.py  tools.py  utils.py
testdata/: ACTB+SOX2.fa  ACTB+SOX2.fa.gz.fai  GRCh38.k24.umap.ACTB_ex1+2.bedgraph.gz.tbi  README  README.md  UCSC.hg38.ncbiRefSeq.ACTB+SOX2.sorted.gtf.gz.tbi  build_small_genome.sh  dmel_r6.36.fa.gz.fai  dmel_r6.36.fa.gz.gzi  dmelanogaster_6_exported_20230523.vcf.gz.tbi  ensembl_Homo_sapiens.GRCh38.109.ACTB+SOX2.gtf.gz.tbi  flybase.dmel-all-r6.51.sorted.gtf.gz.tbi  gencode.v39.ACTB+SOX2.gff3.gz.tbi  mirgenedb.dme.sorted.gff3.gz.tbi  rogue_read.bam.bai  small.ACTB+SOX2.bam.bai  test.bed.gz.tbi  test.bedgraph.gz.tbi  test.vcf.gz.tbi  test_snps.vcf.gz.tbi
tests/: conftest.py  test_apis.py  test_genemodel.py  test_gi.py  test_iterators.py  test_location.py  test_transcriptome.py  test_utils.py
(+22 files in other folders)
