[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygenlib"
version = "0.0.1"
authors = [
  { name="Niko Popitsch", email="niko.popitsch@univie.ac.at" },
]
description = "Pygenlib is a python utilities library for handling genomics data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/popitsch/pygenlib"
"Bug Tracker" = "https://github.com/popitsch/pygenlib/issues"

