[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rnalib"
version = "0.0.1"
authors = [
  { name="Niko Popitsch", email="niko.popitsch@univie.ac.at" },
]
description = "rnalib is a python utilities library for handling transcriptomics data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/popitsch/rnalib"
"Bug Tracker" = "https://github.com/popitsch/rnalib/issues"

[tool.setuptools]
packages = ["rnalib"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
